Endpoint for equivalent components.

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
 	implementation 'com.oracle.database.jdbc:ucp:21.3.0.0'
+	implementation 'org.json:json:20210307'
 	runtimeOnly 'com.h2database:h2'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
