Product Structure Endpoint working fine. Need to think about user and password.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:oracle:thin:@//192.168.1.223:1521/dbprod
+spring.datasource.url=jdbc:oracle:thin:@//192.168.1.223:1521/dbprod
 spring.datasource.username=SAPIENS_TESTE
 spring.datasource.password=SAPIENS_TESTE
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -17,4 +17,4 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 
 spring.h2.console.enabled=true
 
-
+senior.webservices.url=http://baseteste.feelingestofados.com.br/g5-senior-services/sapiens_Synccustomizado?wsdl
