--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,15 @@ dependencies {
 	implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
 	implementation 'com.oracle.database.jdbc:ucp:21.3.0.0'
 	implementation 'org.json:json:20210307'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
 	runtimeOnly 'com.h2database:h2'
+
 	compileOnly 'org.projectlombok:lombok'
+
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
