--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'com.oracle.database.jdbc:ucp:21.3.0.0'
 	implementation 'org.json:json:20210307'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+	implementation 'commons-codec:commons-codec:1.15'
 
 	runtimeOnly 'com.h2database:h2'
 
