--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:oracle:thin:@//192.168.1.223:1521/dbprod
-spring.datasource.username=SAPIENS_TESTE
-spring.datasource.password=SAPIENS_TESTE
+spring.datasource.username=sapiens
+# spring.datasource.username=SAPIENS_TESTE
+spring.datasource.password=sapiens
+# spring.datasource.password=SAPIENS_TESTE
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
@@ -19,3 +21,5 @@ spring.h2.console.enabled=true
 
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
+
+server.port=8081
