Base oficial + entregar campo adicional para derivação na estrutura

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:oracle:thin:@//192.168.1.223:1521/dbprod
-# spring.datasource.username=sapiens
-spring.datasource.username=SAPIENS_TESTE
-# spring.datasource.password=sapiens
-spring.datasource.password=SAPIENS_TESTE
+spring.datasource.username=sapiens
+# spring.datasource.username=SAPIENS_TESTE
+spring.datasource.password=sapiens
+# spring.datasource.password=SAPIENS_TESTE
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
