Finalização inventário + acerto de xml encoding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.datasource.url=jdbc:oracle:thin:@//192.168.1.223:1521/dbprod
-# spring.datasource.username=sapiens
-spring.datasource.username=SAPIENS_TESTE
-# spring.datasource.password=sapiens
-spring.datasource.password=SAPIENS_TESTE
+spring.datasource.username=sapiens
+# spring.datasource.username=SAPIENS_TESTE
+spring.datasource.password=sapiens
+# spring.datasource.password=SAPIENS_TESTE
+server.port=8081
+# server.port=8080
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
@@ -21,5 +23,3 @@ spring.h2.console.enabled=true
 
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
-
-server.port=8081
