--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.br.feelingestofados'
-version = '0.0.1-SNAPSHOT'
+// version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 configurations {
