--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-env=test
-server.port=8082
+#env=test
+#server.port=8082
 
-#env=prod
-#server.port=8081
+env=prod
+server.port=8081
 
 spring.datasource.url=jdbc:oracle:thin:@//192.168.1.223:1521/dbprod
 
